--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,13 @@
     />
   </head>
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
+    <div class="card" id="card">
+      <div class="top-suit" id="top-suit">♠</div>
+      <div id="card-value">A</div>
+      <div class="bottom-suit" id="bottom-suit">♠</div>
     </div>
 
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
+    <!-- Usando 'type="module"' para cargar app.js -->
+    <script type="module" src="app.js"></script>
   </body>
 </html>
